add missing entries in requirement.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,22 @@
 cachetools==5.3.3
-google-auth==2.31.0
-google-auth-oauthlib==1.2.0
+DateTime==5.5
+google-api-core==2.24.0
+google-api-python-client==2.156.0
+google-auth==2.37.0
+google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.2.1
+googleapis-common-protos==1.66.0
 gspread==6.1.2
+httplib2==0.22.0
 oauthlib==3.2.2
+prettytable==3.12.0
+proto-plus==1.25.0
+protobuf==5.29.2
 pyasn1==0.6.0
 pyasn1_modules==0.4.0
+pyparsing==3.2.0
+pytz==2024.2
 requests-oauthlib==2.0.0
 rsa==4.9
-prettytable
-datetime
+uritemplate==4.1.1
+zope.interface==7.2
